// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logic function sync should fail when a route trigger forwards credential headers when a created http route forwards headers as a string 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders must be an array of strings",
              "userFriendlyMessage": "Forwarded request headers must be a list of header names",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Forwarded request headers must be a list of header names",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when a created http route forwards headers as an object 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders must be an array of strings",
              "userFriendlyMessage": "Forwarded request headers must be a list of header names",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Forwarded request headers must be a list of header names",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when a created http route forwards the authorization header 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders cannot include credential headers: authorization",
              "userFriendlyMessage": "Route triggers cannot forward credential headers",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Route triggers cannot forward credential headers",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when a created http route forwards the cookie header with a different case 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders cannot include credential headers: Cookie",
              "userFriendlyMessage": "Route triggers cannot forward credential headers",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Route triggers cannot forward credential headers",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when a created server route forwards the proxy-authorization header 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders cannot include credential headers: proxy-authorization",
              "userFriendlyMessage": "Route triggers cannot forward credential headers",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "create",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Route triggers cannot forward credential headers",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when an existing http route is updated to forward the authorization header 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders cannot include credential headers: authorization",
              "userFriendlyMessage": "Route triggers cannot forward credential headers",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Route triggers cannot forward credential headers",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;

exports[`Logic function sync should fail when a route trigger forwards credential headers when an existing server route is updated with a null header 1`] = `
{
  "extensions": {
    "code": "METADATA_VALIDATION_FAILED",
    "errors": {
      "logicFunction": [
        {
          "errors": [
            {
              "code": "INVALID_LOGIC_FUNCTION_INPUT",
              "message": "forwardedRequestHeaders must be an array of strings",
              "userFriendlyMessage": "Forwarded request headers must be a list of header names",
            },
          ],
          "flatEntityMinimalInformation": {
            "universalIdentifier": Any<String>,
          },
          "metadataName": "logicFunction",
          "status": "fail",
          "type": "update",
        },
      ],
    },
    "message": "Validation failed for 1 logicFunction",
    "summary": {
      "logicFunction": 1,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Forwarded request headers must be a list of header names",
  },
  "message": "Validation errors occurred while syncing application manifest metadata",
  "name": "GraphQLError",
}
`;
